# Personal_Finances_Agent

./: README.md  app.py  main.py  pyproject.toml
UI/: __init__.py  gradio.py
agents/: __init__.py  agent.py  agents.py  prompts.yaml
config/: __init__.py  paths.py
functions/: __init__.py  agent_tools.py  data_processing.py  gradio_responses.py
routes/: __init__.py  chat.py
