[project]
name = "personal-finances-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.0.2",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langgraph>=1.0.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
